# googleaisearch2api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: dev-release.md  proxy-session-allowlist-plan.md
scripts/: probe_duck_ai_concurrency.py  probe_google_ai.py  probe_proxy_sessions.py  smoke_api.py  update_from_ghcr.sh
src/googleaisearch2api/: app.py  browser.py  browser_gate.py  config.py  db.py  duck_ai.py  egress.py  fast_proxy_probe.py  iplark.py  logging.py  openai_adapter.py  pool.py  prompting.py  proxy_bridge.py  proxy_recovery.py  proxy_sessions.py  quality.py  query_adapter.py  schemas.py  store.py
src/googleaisearch2api/static/: app.css  app.js
src/googleaisearch2api/templates/: console.html  console_login.html
tests/: test_app.py  test_browser_gate.py  test_browser_helpers.py  test_config.py  test_duck_ai.py  test_egress.py  test_fast_proxy_probe.py  test_hot_pool_routing.py  test_iplark.py  test_openai_adapter.py  test_pool.py  test_probe_proxy_sessions.py  test_prompting.py  test_proxy_bridge.py  test_proxy_recovery.py  test_proxy_sessions.py  test_quality.py  test_quality_json_artifacts.py  test_query_adapter.py  test_store.py
